docs/syntax.bnf
juice-file ::= 
    | top-level-declaration*
    | EOF 

top-level-declaration ::= 
    | export-declaration
    | declaration
    | expression

export-declaration ::=
    | 'export' declaration

declaration ::=
    | function-declaration
    | variable-declaration

function-declaration ::= identifier '=' 'fun' function-arguments (':' type) ':' type function-body
function-arguments ::= '(' ((typed-identifier) (',' typed-identifier)* ))? ')'
function-body ::= '{' block '}'

variable-declaration ::= identifier '=' 'const' expression

block ::=  '{' (statements ';')* '}'

statements ::= 
    | variable-declaration
    | expression

expression ::= equality
equality ::= comparison ( ( "!=" | "==" ) comparison )*
comparison ::= addition ( ( ">" | ">=" | "<" | "<=" ) addition )*
addition ::= multiplication ( ( "-" | "+" ) multiplication )*
multiplication ::= unary ( ( "/" | "*" ) unary )*

unary ::= 
    | ( "!" | "-"  | "+" ) unary 
    | primary

primary ::=
    | literal
    | identifier
    | "(" expression ")"

typed-identifier ::= identifier ':' type

type ::= 
    | BOOLEAN_TYPE
    | INT_TYPE
    | FLOAT_TYPE

literal ::=
    | FLOAT_LITERAL
    | INT_LITERAL
    | BOOLEAN_LITERAL

identifier ::= IDENTIFIER
